[gd_scene load_steps=3 format=3 uid="uid://clra83mtmm8a8"]

[ext_resource type="Script" uid="uid://b2dq04c7umnvq" path="res://scenes/keyboard/virtual_keyboard.gd" id="1_4kr8v"]
[ext_resource type="Theme" uid="uid://8nc5fg2of0f5" path="res://themes/keyboard_theme.tres" id="1_fv0u2"]

[node name="VirtualKeyboard" type="Control"]
custom_minimum_size = Vector2(0, 260)
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("1_fv0u2")
script = ExtResource("1_4kr8v")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Row1" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 8
alignment = 1

[node name="Row2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 8
alignment = 1

[node name="Row3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 8
alignment = 1
